--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Calculator</title>
+  </head>
+  <body>
+    <div class="row mt-4">
+      <div class="col-sm-4 bg-cal offset-sm-4" id="boxlayout">
+        <input type="text" class="form-control" value="" id="display" />
+        <div class="d-flex row-1">
+          <div>
+            <input
+              class="item-flex-1"
+              type="button"
+              value="DEG"
+              id="deg"
+            />
+          </div>
+          <div>
+            <input
+              class="item-flex-1"
+              type="button"
+              value="F-E"
+              onclick=""
+              id="fe"
+            />
+          </div>
+        </div>
+        <div class="d-flex justify-content-around mt-3 row-2" id="memory">
+          <input
+            class="item-flex-2"
+            type="button"
+            value="MC"
+            onclick=""
+            id="mc"
+          />
+          <input
+            class="item-flex-2"
+            type="button"
+            value="MR"
+            onclick=""
+            id="mr"
+          />
+          <input
+            class="item-flex-2"
+            type="button"
+            value="M+"
+            onclick=""
+            id="m+"
+          />
+          <input
+            class="item-flex-2"
+            type="button"
+            value="M-"
+            onclick=""
+            id="m-"
+          />
+          <input
+            class="item-flex-2"
+            type="button"
+            value="MS"
+            onclick=""
+            id="ms"
+          />
+        </div>
+        <div class="d-flex mt-4 row-3">
+          <div class="trigonometry">
+            <p class="item-flex-3" id="tri">
+              <img src="./images/tri.png" alt=""> Trigonomitry<i class="fa fa-angle-down"></i>
+            </p>
+            <div class="tri-list none"></div>
+          </div>
+          <div class="function">
+            <p class="item-flex-3" id="fun">
+              <img src="./images/fun.png" alt=""> Function <i class="fa fa-angle-down"></i>
+            </p>
+            <div class="fun-list none"></div>
+          </div>
+        </div>
+        <div class="grid-container mt-3"></div>
+      </div>
+    </div>
+    <script src="./js/main.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
 
